--- a/src/aura/PowerRelatedList2/PowerRelatedList2.cmp
+++ b/src/aura/PowerRelatedList2/PowerRelatedList2.cmp
@@ -1,14 +1,14 @@
 <aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" controller="Ora">
     <ltng:require scripts="{!$Resource.lodash}" afterScriptsLoaded="{!c.doInit}"/>
     
-    <aura:attribute name="objectName" type="string" required="true" default="Contact" />
-    <aura:attribute name="lookupField" type="string" required="true" default="AccountId"/>    
-    <aura:attribute name="displayFields" type="string" required="true" default="Name, Phone, Email"/>
-    <aura:attribute name="editableFields" type="string" required="false" default="Phone"/>
-    <aura:attribute name="showFilter" type="boolean" default="false"/>
-    <aura:attribute name="allowAdd" type="boolean" default="true"/>
-    <aura:attribute name="addRecordTypeId" type="string" default="01215000001MWZP" required="false"/>
-    <aura:attribute name="iconName" type="string"/>
+    <aura:attribute name="objectName" type="string" required="true" default="Contact"  access="global"/>
+    <aura:attribute name="lookupField" type="string" required="true" default="AccountId" access="global"/>    
+    <aura:attribute name="displayFields" type="string" required="true" default="Name, Phone, Email" access="global"/>
+    <aura:attribute name="editableFields" type="string" required="false" default="Phone" access="global"/>
+    <aura:attribute name="showFilter" type="boolean" default="false" access="global"/>
+    <aura:attribute name="allowAdd" type="boolean" default="true" access="global"/>
+    <aura:attribute name="addRecordTypeId" type="string" default="01215000001MWZP" required="false" access="global"/>
+    <aura:attribute name="iconName" type="string" access="global"/>
     
     <!--internal only attributes-->
     <aura:attribute name="newRecord" type="object"/>
