--- a/src/aura/UploadFileComponent/UploadFileComponent.cmp
+++ b/src/aura/UploadFileComponent/UploadFileComponent.cmp
@@ -5,6 +5,7 @@
 	<aura:attribute name="caption" type="String"  access="global"/>
 	<aura:attribute name="fieldAPIName" type="String" access="global" />
 	<aura:attribute name="fieldLabel" type="String" access="global" />
+	<aura:attribute name="parentId" type="String" default="{!v.recordId}" access="global" />
 
 
 	<!-- internal attributes -->
@@ -22,7 +23,6 @@
 	<!-- <aura:attribute name="contentDocId" type="String" default="" /> -->
 	<!-- <aura:attribute name="contentVersionId" type="String" /> -->
 	<!-- <aura:attribute name="imageSrc"  type="String" /> -->
-	<aura:attribute name="parentId" type="String" default="{!v.recordId}" />
 
 
 	<aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
