--- a/src/aura/LightningFields/LightningFields.cmp
+++ b/src/aura/LightningFields/LightningFields.cmp
@@ -26,37 +26,40 @@
                     <!--show label-->                         
                     <label class="{!field.label == 'label' ? 'slds-form-element__label' : 'slds-hide'}" for="text-input-01">{!field.describe.label }</label>
                     
-                     <aura:if isTrue="{!and(field.describe.help, field.label == 'label')}">   
+                    <aura:if isTrue="{!and(field.describe.help, field.label == 'label')}">   
                         
                         
-                        <span title="{!field.describe.help}" onmouseover="{!c.popTitle}">
+                        <span data-help="{!field.describe.help}" data-field="{!field.describe.label}" onmouseenter="{!c.popTitle}" id="{!field.describe.label + '-help'}" title="{!field.describe.label}">
 
-                            <lightning:icon iconName="utility:info" alternativeText="get help" size="x-small" />
-                        </span>
+                            <lightning:icon iconName="utility:info" alternativeText="get help" size="xx-small" />
+                            
+                      </span>
 
-                        
-                    </aura:if> 
-                    
-                    <!--show help-->
-                    <label class="{!field.label == 'help' ? 'slds-form-element__label' : 'slds-hide'}" for="text-input-01">{!field.describe.help || field.describe.label}</label>
-                    
-                    
-                    <div class="slds-form-element__control">
-                        <!--can read, can't edit-->
-                            <aura:if isTrue="{!and(field.describe.userCanRead, !field.editable)}">
-                                <c:SingleFieldDisplayerReadOnly record="{!v.record}" fieldDescribe="{!field}"/>
-                            </aura:if>
-                            <!--full read-write-->
-                            <aura:if isTrue="{!and(field.describe.userCanRead, field.editable)}">
-                                <c:SingleFieldDisplayer record="{!v.record}" fieldDescribe="{!field}" instantSave="{!v.instantSave}"/>
-                            </aura:if>
-                    </div>
+                      
+                  </aura:if> 
+                  
+                  <!--show help-->
+                  <label class="{!field.label == 'help' ? 'slds-form-element__label' : 'slds-hide'}" for="text-input-01">{!field.describe.help || field.describe.label}</label>
+                  
+                  
+                  <div class="slds-form-element__control">
+                    <!--can read, can't edit-->
+                    <aura:if isTrue="{!and(field.describe.userCanRead, or(!field.editable, field.related))}">
+                        <c:SingleFieldDisplayerReadOnly record="{!v.record}" fieldDescribe="{!field}"/>
+                    </aura:if>
+                    <!--full read-write-->
+                    <aura:if isTrue="{!and(field.describe.userCanRead, field.editable, !field.related)}">
+                        <c:SingleFieldDisplayer record="{!v.record}" fieldDescribe="{!field}" instantSave="{!v.instantSave}"/>
+                    </aura:if>
                 </div>
-            </aura:iteration>
-        </div>
-    </aura:iteration>
-    <aura:if isTrue="{!v.showSpinner}">
+            </div>
+        </aura:iteration>
+    </div>
+</aura:iteration>
+<aura:if isTrue="{!v.showSpinner}">
+    <div class="slds-is-relative">
         <lightning:spinner/>
-    </aura:if>
-    {!v.body}
+    </div>
+</aura:if>
+{!v.body}
 </aura:component>
