--- a/src/aura/LightningSharingAction/LightningSharingAction.cmp
+++ b/src/aura/LightningSharingAction/LightningSharingAction.cmp
@@ -1,4 +1,4 @@
-<aura:component implements="force:lightningQuickAction, force:hasRecordId">
+<aura:component implements="force:lightningQuickActionWithoutHeader, force:hasRecordId">
 
 <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
