--- a/src/aura/LightningDataTable/LightningDataTable.cmp
+++ b/src/aura/LightningDataTable/LightningDataTable.cmp
@@ -1,25 +1,25 @@
 <aura:component controller="Ora" access="global">
-    
-    <ltng:require scripts="{!$Resource.lodash}" afterScriptsLoaded="{!c.doInit}"/>
-    
+
+    <ltng:require scripts="{!$Resource.lodash}" afterScriptsLoaded="{!c.doInit}" />
+
     <!--attributes set by parent-->
     <!--filtering is handled above my pay grade.  I just show whatever the results are -->
-    <aura:attribute name="results" type="object[]" required="true" access="global"/>
-    <aura:attribute name="displayFields" type="string" required="true" access="global"/>
-    <aura:attribute name="editableFields" type="string" required="false" default="Phone" access="global"/>
-    <aura:attribute name="sObjectType" type="string" required="true" access="global"/>
-    
-    <!--private attributes -->
-    <aura:attribute name="sortState" type="object" access="global"/>
-    <aura:attribute name="displayFieldsArray" type="object[]" access="global"/>
-    
-    <aura:registerEvent name="selectSObject" type="ltng:selectSObject"/>
+    <aura:attribute name="results" type="object[]" required="true" access="global" />
+    <aura:attribute name="displayFields" type="string" required="true" access="global" />
+    <aura:attribute name="editableFields" type="string" required="false" default="Phone" access="global" />
+    <aura:attribute name="sObjectType" type="string" required="true" access="global" />
 
-    <table class="slds-table slds-table--bordered slds-no-row-hover slds-table--cell-buffer">
+    <!--private attributes -->
+    <aura:attribute name="sortState" type="object" access="global" />
+    <aura:attribute name="displayFieldsArray" type="object[]" access="global" />
+
+    <aura:registerEvent name="selectSObject" type="ltng:selectSObject" />
+
+    <table class="slds-table slds-table--bordered slds-no-row-hover slds-wrap slds-table_cell-buffer slds-max-medium-table_stacked-horizontal">
         <thead>
-            <tr>
+            <tr class="slds-has-flexi-truncate">
                 <aura:iteration items="{!v.displayFieldsArray}" var="field">
-                    <th class="slds-text-heading--label" scope="col">
+                    <th scope="col">
                         <div class="slds-truncate" id="{!field.describe.name}" onclick="{!c.changeSort}">{!field.describe.label}</div>
                     </th>
                 </aura:iteration>
@@ -27,31 +27,33 @@
         </thead>
         <tbody>
             <aura:iteration items="{!v.results}" var="record">
-                <tr class="slds-hint-parent">            
+                <tr class="slds-hint-parent slds-has-flexi-truncate">
                     <aura:iteration items="{!v.displayFieldsArray}" var="field" start="0" end="1">
-                        <td class="{!'slds-size--1-of-' + v.displayFieldsArray.length}" data-label="{!field.describe.label}">
+
+                        <td data-label="{!field.describe.label}">
                             <a onclick="{!c.selectRecord}" id="{!record.Id}">
-                                <c:SingleFieldDisplayer record="{!record}" fieldDescribe="{!field}"/>
+                                <c:SingleFieldDisplayer record="{!record}" fieldDescribe="{!field}" />
                             </a>
                         </td>
                     </aura:iteration>
                     <aura:iteration items="{!v.displayFieldsArray}" var="field" start="1">
                         <!-- todo:size of based display fields array length -->
-                        <td class="{!'slds-size--1-of-' + v.displayFieldsArray.length}" data-label="{!field.describe.label}">
-                            <!--can read, can't edit-->
+
+                        <!--can read, can't edit-->
+                        <td data-label="{!field.describe.label}">
                             <aura:if isTrue="{!and(field.describe.userCanRead, or(!field.editable, field.related))}">
-                                <c:SingleFieldDisplayerReadOnly record="{!record}" fieldDescribe="{!field}"/>
+                                <c:SingleFieldDisplayerReadOnly record="{!record}" fieldDescribe="{!field}" />
                             </aura:if>
                             <!--full read-write-->
                             <aura:if isTrue="{!and(field.describe.userCanRead, field.editable, !field.related)}">
-                                <c:SingleFieldDisplayer record="{!record}" fieldDescribe="{!field}"/>
+                                <c:SingleFieldDisplayer record="{!record}" fieldDescribe="{!field}" />
                             </aura:if>
                         </td>
-                    </aura:iteration>                            
+                    </aura:iteration>
                 </tr>
             </aura:iteration>
-            
-            
+
+
         </tbody>
     </table>
 </aura:component>
